--- a/src/assets/css/product.css
+++ b/src/assets/css/product.css
@@ -301,6 +301,12 @@
 }
 #productDetail .wrapper .left .reviews table .record td.subject {
   font-size: 19px;
+  padding-right: 50px;
+}
+#productDetail .wrapper .left .reviews table .record td.image img {
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
 }
 #productDetail .wrapper .left .reviews table .read {
   visibility: collapse;
