--- a/src/assets/css/product.scss
+++ b/src/assets/css/product.scss
@@ -371,6 +371,15 @@
 
                             &.subject {
                                 font-size: 19px;
+                                padding-right: 50px;
+                            }
+
+                            &.image {
+                                img {
+                                    width: 50px;
+                                    height:50px;
+                                    border-radius: 50%;
+                                }
                             }
                         }
                     }
